# TeachingDataScience

./: .gitignore  Awesome-AI-By-Bharat.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COURSES.md  LICENSE  LetsAI.md  Main_Seminar_ArtificialIntelligenceMachineLearning_Presentation.tex  Main_Seminar_ArtificialIntelligence_Presentation.tex  Main_Seminar_Chatbot_CheatSheet.tex  Main_Seminar_Chatbot_Presentation.tex  Main_Seminar_DeepNaturalLanguageProcessing_Presentation.tex  Main_Seminar_MachineLearning_Presentation.tex  Main_Seminar_MidcurveNN_Presentation.tex  Main_Seminar_NaturalLanguageProcessing_Presentation.tex  Main_Seminar_Python_CheatSheet.tex  Main_UnderConstruction_Workshop_Adv_Python_CheatSheet.tex  Main_UnderConstruction_Workshop_Adv_Python_Presentation.tex  Main_Workshop_Chatbot_CheatSheet.tex  Main_Workshop_Chatbot_Presentation.tex  Main_Workshop_DataAnalytics_Presentation.tex  Main_Workshop_DeepLearning_Presentation.tex  Main_Workshop_MachineLearning_Presentation.tex  Main_Workshop_MathsForAI_Presentation.tex  Main_Workshop_NaturalLanguageProcessing_CheatSheet.tex  Main_Workshop_Python_Presentation.tex  Notes.md  README.md  References_HHaji.md  about_me.tex  ai_intro.tex  ai_intro_short.tex  ai_seminar_content.tex  beautifulsoup_intro.tex  chatbot_conclusion.tex  chatbot_healthcare.tex  chatbot_intro.tex  chatbot_platforms.tex  chatbot_rasa_chatbot_customactions_iplbot.tex  (+126 more)
.claude/: settings.local.json
.git-rewrite/: index
.github/: PULL_REQUEST_TEMPLATE.md
Admin/: Course_DL_Pamphlet.md  Course_GenAI_Pamphlet.md  Course_ML_CoEP_Pamphlet.md  Course_ML_Pamphlet.md  Course_RAG_Pamphlet.md  CoursesAndTalks.md  InterviewPrep.md  PAIC_ProgramList_2026.md  Prompts.md  Teaching_Notes_CoEP.md  Workshops_ZeroToHero_DLL.md
Code/: .gitignore  FrequentyUsedProcedures.md  README.md
Code/claudecode/CimatronWorshop/: .coverage  CLAUDE.md  README.md  pyproject.toml
Code/claudecode/CimatronWorshop/.claude/: settings.json
Code/claudecode/CimatronWorshop/.claude/agents/: devops.md  specs.md
Code/claudecode/CimatronWorshop/.claude/commands/: add-check.md
Code/claudecode/CimatronWorshop/.claude/skills/geometry-validation/: SKILL.md
Code/claudecode/CimatronWorshop/.claude/skills/inspection-report-summary/: SKILL.md
Code/claudecode/CimatronWorshop/docs/specs/: stlinspector-spec.md
Code/claudecode/CimatronWorshop/src/: Box.stl  cli.py  config.py  core.py
Code/claudecode/CimatronWorshop/src/stlinspector/: __init__.py  app.py  cli.py  config.py  core.py
Code/claudecode/CimatronWorshop/tests/: conftest.py  test_core.py
Code/crewai/researcher/: .gitignore  README.md  pyproject.toml
Code/crewai/researcher/src/researcher/: crew.py  main.py
Code/langgraph/open_deep_research-langcahin-ai/: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  langgraph.json  pyproject.toml
Code/langgraph/open_deep_research-langcahin-ai/examples/: arxiv.md  inference-market-gpt45.md  inference-market.md  pubmed.md
Code/langgraph/open_deep_research-langcahin-ai/src/legacy/: CLAUDE.md  __init__.py  configuration.py  graph.ipynb  graph.py  legacy.md  multi_agent.ipynb  multi_agent.py  prompts.py  state.py  utils.py
Code/langgraph/open_deep_research-langcahin-ai/src/legacy/files/: vibe_code.md
Code/langgraph/open_deep_research-langcahin-ai/src/legacy/tests/: conftest.py  run_test.py  test_report_quality.py
Code/langgraph/open_deep_research-langcahin-ai/src/open_deep_research/: configuration.py  deep_researcher.py  prompts.py  state.py  utils.py
Code/langgraph/open_deep_research-langcahin-ai/src/security/: auth.py
Code/langgraph/open_deep_research-langcahin-ai/tests/: evaluators.py  extract_langsmith_data.py  pairwise_evaluation.py  prompts.py  run_evaluate.py  supervisor_parallel_evaluation.py
Code/langgraph/open_deep_research-langcahin-ai/tests/expt_results/: deep_research_bench_claude4-sonnet.jsonl  deep_research_bench_gpt-4.1.jsonl  deep_research_bench_gpt-5.jsonl
Code/opencode/demo/: .env.example  .gitignore  AGENTS.md  pyproject.toml
Code/opencode/demo/.opencode/: opencode.json
Code/opencode/demo/.opencode/agents/: debug.md  docs.md  review.md  specs.md
Code/opencode/demo/.opencode/commands/: changelog.md  docs.md  review.md  test-gen.md  test-run.md
Code/opencode/demo/.opencode/skills/pytest-patterns/: SKILL.md
Code/opencode/demo/.opencode/skills/refactor-patterns/: SKILL.md
Code/opencode/demo/docs/specs/: mychatbot-spec.md
Code/opencode/demo/mychatbot/: .env.example  AGENTS.md  README.md  app.py  chain.py  cli.py  pyproject.toml  requirements.txt
Code/opencode/demo/mychatbot/tests/: test_chain.py
Code/opencode/demo/src/mychatbot/: __init__.py  app.py  chain.py  cli.py  config.py  types.py
Code/opencode/demo/src/mychatbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Code/opencode/demo/tests/: __init__.py  test_app.py  test_chain.py  test_cli.py  test_config.py
Jupyter/: .gitignore  1_nlu_exercises.ipynb  README.md  Rasa Conversational AI Platform Cheat Sheet.docx  actions.py  domain.yml  environment.yml  errors.md  exercise.md  installation.md  ipl_actions.py  iplbot_complete_yogesh.ipynb  rasa_nlu_exercise_TBD.ipynb  requirements.txt
LaTeX/: .gitignore  HR_Seminar_ChatGPT_Presentation.tex  IMI_Seminar_ChatGPT_Presentation.tex  Main_Agenda.tex  Main_Agenda_LargeLanguageModels.tex  Main_Agenda_MachineLearning.tex  Main_Agenda_PromptEngineering.tex  Main_Agenda_PromptsForMarketing.tex  Main_Agenda_PythonMachineLearning.tex  Main_Agenda_RAG_CheatSheet.tex  (+1509 more)
(+3640 files in other folders)
