[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stlinspector"
version = "0.1.0"
description = "STEP/STL geometry inspector and validator (PoC)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "trimesh>=4.0",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "streamlit>=1.35",
    "plotly>=5.20",
]

[project.scripts]
inspect = "stlinspector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
